# mewe

./: Dockerfile  README.md  bot.py  fiveserver.config.js  pyproject.toml  run.py
Amvera/: .env  Dockerfile  amvera.yml  app.py  base.html  bot-old.py  bot.py  create-form.html  footer.html  index.html  index.php  main.py  requirements.txt
Amvera/static/css/: main.css  styles.css
Amvera/static/js/: scripts.js
Backend/: app.py  main.py
Bot_Python/: .env  run.py  to12.txt  Без названия.docx
Bot_Python/app/: bot.py  config.py
Bot_Python/app/static/css/: styles.css
Bot_Python/app/templates/: index.html
Web-dev/: events-history.php  footer.html  index.php  last-events.php  my-events.php
Web-dev/api/: events.php
Web-dev/config/: db.php
Web-dev/partials/: create-form.php  footer.html
Web-dev/static/css/: events-history.css  last-events.css  main.css  my-events.css
Web-dev/static/js/: create-event.js  my-events.js  scripts.js  search-categories.js
Web_dev/: index.php
Web_dev/frontend/tamplates/: index.php
app/: __init__.py  amvera.yml  routes.py
app/static/css/: create-form.css  footer.css
app/templates/: create-form.html  footer.html  index.html
staging/: app.py
staging/web-version/: last-events.php  my-events.php
staging/web-version/api/: rate-event.php
web-version/: index.php
web-version/api/: events.php
web-version/config/: db.php
web-version/handlers/: create-event.php
web-version/static/css/: footer.css  main.css
web_full-stack/app/: app.py
web_full-stack/app/templates/: form.html
(+5 files in other folders)
