[project]
name = "mewe"
version = "0.1.0"
description = ""
authors = [
    {name = "kassinione",email = "feelinglev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "python-telegram-bot (>=22.3,<23.0)",
    "flask (>=3.1.2,<4.0.0)",
    "aiogram (==3.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
